--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <title>My Personal Portfolio</title>
   <style>
     body {
@@ -41,42 +43,6 @@
       color: #ccc;
     }
 
-    button[type="submit"] {
-      background-color: #2196f3;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 30px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: background 0.3s ease;
-    }
-
-    button[type="submit"]:hover {
-      background-color: #0b7dda;
-    }
-
-    .music-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      z-index: 999;
-      background: #2196f3;
-      color: white;
-      padding: 0.5rem 1rem;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      font-weight: 600;
-      box-shadow: 0 0 10px rgba(33, 150, 243, 0.6);
-      transition: background 0.3s ease;
-    }
-
-    .music-toggle:hover {
-      background: #0b7dda;
-      box-shadow: 0 0 15px rgba(11, 125, 218, 0.8);
-    }
-
     input, textarea {
       width: 100%;
       padding: 0.75rem;
@@ -88,12 +54,7 @@
 
     form {
       max-width: 500px;
-      margin: 2rem auto;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 1.5rem;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(33, 150, 243, 0.6);
+      margin: auto;
     }
 
     .section {
@@ -102,14 +63,6 @@
       border-radius: 20px;
       margin: 2rem auto;
       max-width: 800px;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-    }
-
-    .section.visible {
-      opacity: 1;
-      transform: translateY(0);
     }
 
     .nav {
@@ -132,26 +85,21 @@
       align-items: center;
       flex-wrap: wrap;
       padding: 2rem;
+      gap: 2rem;
     }
 
     .home__information {
-      max-width: 50%;
+      max-width: 500px;
     }
 
     .home__img img {
       max-width: 250px;
       border-radius: 50%;
       box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-      border: 4px solid #00aaff;
-      transition: transform 0.3s ease;
-    }
-
-    .home__img img:hover {
-      transform: scale(1.05);
     }
 
     .home__social {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
     }
 
     .home__social-icon {
@@ -164,40 +112,36 @@
       .home {
         flex-direction: column;
         align-items: center;
-      }
-      .home__information, .home__img {
-        max-width: 100%;
         text-align: center;
       }
+
+      .home__information {
+        max-width: 100%;
+      }
     }
 
-    .anime-text, .home__img img, .home__button {
-      animation: fadeInUp 1s ease forwards;
-      opacity: 0;
+    .music-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 999;
+      background: #ff4081;
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 600;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
     }
 
-    .anime-text:nth-child(1) { animation-delay: 0.2s; }
-    .anime-text:nth-child(2) { animation-delay: 0.4s; }
-    .anime-text:nth-child(3) { animation-delay: 0.6s; }
+    .music-toggle:hover {
+      background-color: #e91e63;
+      box-shadow: 0 0 15px #ff4081;
+    }
 
     #youtube-iframe {
       display: none;
-    }
-
-    .skills-list {
-      list-style: none;
-      padding: 0;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-    }
-
-    .skills-list li {
-      background: rgba(255,255,255,0.1);
-      padding: 0.5rem 1rem;
-      border-radius: 12px;
-      border: 1px solid #2196f3;
     }
   </style>
 </head>
@@ -213,8 +157,8 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
@@ -223,40 +167,29 @@
   </header>
 
   <main class="l-main bd-grid">
-    <div class="home">
+    <div class="home" data-aos="fade-up">
       <div class="home__information">
-        <span class="home__pressent anime-text">Hello, My name is</span>
-        <h1 class="home__title anime-text">Vern Esg</h1>
-        <span class="home__skill anime-text">Web Developer</span>
+        <span class="home__pressent">Hello, My name is</span>
+        <h1 class="home__title">Vern Esg</h1>
+        <span class="home__skill">Web Developer</span>
         <div class="home__social">
           <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
           <ion-icon name="logo-instagram" class="home__social-icon"></ion-icon>
           <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
         </div>
       </div>
-      <div class="home__img"><img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" /></div>
+      <div class="home__img">
+        <img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" />
+      </div>
     </div>
 
-    <section id="about" class="section">
+    <!-- Sections -->
+    <section id="about" class="section" data-aos="fade-right">
       <h2>About Me</h2>
       <p>I am Vern Esg, a passionate web developer who builds clean and creative websites.</p>
     </section>
 
-    <section id="skills" class="section">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>HTML & CSS</li>
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Node.js</li>
-        <li>PHP</li>
-        <li>MySQL</li>
-        <li>UI/UX Design</li>
-        <li>Git & GitHub</li>
-      </ul>
-    </section>
-
-    <section id="services" class="section">
+    <section id="services" class="section" data-aos="fade-left">
       <h2>Services</h2>
       <ul>
         <li>Responsive Web Development</li>
@@ -265,22 +198,55 @@
       </ul>
     </section>
 
-    <section id="blog" class="section">
+    <section id="skills" class="section" data-aos="zoom-in">
+      <h2>Skills</h2>
+      <div style="display: flex; flex-wrap: wrap; gap: 1rem;">
+        <div style="flex: 1; min-width: 200px;">
+          <h4>Frontend</h4>
+          <ul>
+            <li><i class="fab fa-html5"></i> HTML5</li>
+            <li><i class="fab fa-css3-alt"></i> CSS3 & SCSS</li>
+            <li><i class="fab fa-js-square"></i> JavaScript</li>
+            <li><i class="fab fa-react"></i> React.js</li>
+          </ul>
+        </div>
+        <div style="flex: 1; min-width: 200px;">
+          <h4>Backend</h4>
+          <ul>
+            <li><i class="fab fa-node-js"></i> Node.js</li>
+            <li><i class="fas fa-server"></i> Express</li>
+            <li><i class="fab fa-php"></i> PHP</li>
+            <li><i class="fas fa-database"></i> MySQL</li>
+          </ul>
+        </div>
+        <div style="flex: 1; min-width: 200px;">
+          <h4>Tools</h4>
+          <ul>
+            <li><i class="fab fa-git-alt"></i> Git & GitHub</li>
+            <li><i class="fas fa-code"></i> VS Code</li>
+            <li><i class="fab fa-figma"></i> Figma</li>
+            <li><i class="fas fa-fire"></i> Firebase</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="blog" class="section" data-aos="fade-up">
       <h2>Blog</h2>
       <p>Coming soon! Here I’ll share tips, tutorials, and insights into modern web development.</p>
     </section>
 
-    <section id="achievements" class="section">
+    <section id="achievements" class="section" data-aos="flip-up">
       <h2>Achievements</h2>
       <ul>
         <li>Achieving High School Diploma</li>
-        <li>Certified at online programming</li>
-        <li>GitHub repository maker</li>
-        <li>Second year College student</li>
+        <li>Certified in Online Programming</li>
+        <li>GitHub Repository Maker</li>
+        <li>Second-Year College Student</li>
       </ul>
     </section>
 
-    <section id="contact" class="section">
+    <section id="contact" class="section" data-aos="fade-up">
       <h2>Contact</h2>
       <form action="https://formspree.io/f/xyzwarbq" method="POST">
         <input type="text" name="name" placeholder="Your Name" required />
@@ -292,15 +258,18 @@
   </main>
 
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+    AOS.init({ duration: 1000 });
+
     let isPlaying = false;
     function toggleYouTubeMusic() {
       const iframe = document.getElementById("youtube-iframe");
       const button = document.querySelector(".music-toggle");
 
       if (!isPlaying) {
-        iframe.src = "https://www.youtube.com/embed/Ukko12nzYcI?autoplay=1&loop=1&playlist=Ukko12nzYcI";
+        iframe.src = "https://www.youtube.com/embed/Ukko12nzYcI
+?autoplay=1&loop=1&playlist=JGwWNGJdvx8";
         button.textContent = "Pause Music";
         isPlaying = true;
       } else {
@@ -309,23 +278,6 @@
         isPlaying = false;
       }
     }
-
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('visible');
-        }
-      });
-    }, { threshold: 0.1 });
-
-    document.querySelectorAll('.section').forEach(section => {
-      observer.observe(section);
-    });
-
-    window.addEventListener("DOMContentLoaded", () => {
-      document.querySelectorAll('.anime-text, .home__img img, .home__button')
-        .forEach(el => el.style.opacity = 1);
-    });
   </script>
 </body>
 </html>
