--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <title>My Personal Portfolio</title>
   <style>
     body {
@@ -15,10 +17,64 @@
       color: #fff;
       margin: 0;
       padding: 0;
+      font-size: 1.1rem;
+      text-align: center;
+    }
+
+    .loader {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 10000;
+      transition: opacity 0.5s ease, visibility 0.5s ease;
+    }
+
+    .loader.fade-out {
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    .loader span {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin: 3px;
+      background-color: #4CAF50;
+      border-radius: 50%;
+      animation: bounce 0.6s infinite alternate;
+    }
+
+    .loader span:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .loader span:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes bounce {
+      to {
+        transform: translateY(-20px);
+        background-color: #8BC34A;
+      }
     }
 
     h1, h2, .nav__logo {
       font-family: 'Playfair Display', serif;
+    }
+
+    h2 {
+      font-size: 2rem;
+    }
+
+    p, li {
+      font-size: 1.1rem;
     }
 
     .nav__logo, .nav__link {
@@ -32,37 +88,40 @@
     }
 
     .home__title {
-      font-size: 3rem;
+      font-size: 3.2rem;
       margin: 0.5rem 0;
     }
 
     .home__skill {
-      font-size: 1.5rem;
+      font-size: 1.7rem;
       color: #ccc;
-    }
-
-    .home__button, button[type="submit"] {
-      background-color: #ff4081;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 30px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: background 0.3s ease;
-    }
-
-    .home__button:hover, button[type="submit"]:hover {
-      background-color: #e91e63;
     }
 
     input, textarea {
       width: 100%;
-      padding: 0.75rem;
+      padding: 0.85rem;
       margin: 0.5rem 0;
       border: none;
       border-radius: 8px;
+      font-size: 1.05rem;
       font-family: 'Poppins', sans-serif;
+    }
+
+    button {
+      padding: 0.75rem 1.5rem;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #45a049;
+      box-shadow: 0 0 12px #4CAF50;
     }
 
     form {
@@ -80,9 +139,9 @@
 
     .nav {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      padding: 1rem 2rem;
+      padding: 1rem;
       background-color: rgba(0, 0, 0, 0.8);
     }
 
@@ -90,18 +149,23 @@
       display: flex;
       list-style: none;
       gap: 1.5rem;
+      justify-content: center;
+      padding: 0;
+      margin: 0;
     }
 
     .home {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
       flex-wrap: wrap;
       padding: 2rem;
+      gap: 2rem;
+      text-align: center;
     }
 
     .home__information {
-      max-width: 50%;
+      max-width: 500px;
     }
 
     .home__img img {
@@ -111,59 +175,35 @@
     }
 
     .home__social {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
     }
 
     .home__social-icon {
-      font-size: 1.8rem;
-      margin-right: 1rem;
+      font-size: 2rem;
+      margin-right: 1.2rem;
       cursor: pointer;
     }
-
-    @media (max-width: 768px) {
-      .home {
-        flex-direction: column;
-        align-items: center;
-      }
-      .home__information, .home__img {
-        max-width: 100%;
-        text-align: center;
-      }
-    }
-
-    @keyframes fadeInUp {
-      0% {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .anime-text, .section, .home__img img, .home__button {
-      animation: fadeInUp 1s ease forwards;
-      opacity: 0;
-    }
-
-    .anime-text:nth-child(1) { animation-delay: 0.2s; }
-    .anime-text:nth-child(2) { animation-delay: 0.4s; }
-    .anime-text:nth-child(3) { animation-delay: 0.6s; }
 
     .music-toggle {
       position: fixed;
       top: 20px;
       right: 20px;
       z-index: 999;
-      background: #ff4081;
+      background: #2196F3;
       color: white;
-      padding: 0.5rem 1rem;
+      padding: 0.6rem 1.4rem;
       border: none;
       border-radius: 30px;
       cursor: pointer;
       font-weight: 600;
+      font-size: 1rem;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .music-toggle:hover {
+      background-color: #1e88e5;
+      box-shadow: 0 0 15px #2196F3;
     }
 
     #youtube-iframe {
@@ -171,96 +211,25 @@
     }
   </style>
 </head>
-
 <body>
-  <!-- Music toggle button -->
+  <div class="loader" id="page-loader">
+    <span></span><span></span><span></span>
+  </div>
+
   <button class="music-toggle" onclick="toggleYouTubeMusic()">Play Music</button>
   <iframe id="youtube-iframe" width="0" height="0" src="" frameborder="0" allow="autoplay" allowfullscreen></iframe>
 
-  <!-- HEADER -->
-  <header class="l-header">
-    <nav class="nav bd-grid">
-      <div><a href="#" class="nav__logo">Programmer</a></div>
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-          <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
-          <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
-          <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+  <!-- Rest of your HTML content here (header, main, etc.) -->
 
-  <!-- MAIN -->
-  <main class="l-main bd-grid">
-    <div class="home">
-      <div class="home__information">
-        <span class="home__pressent anime-text">Hello, My name is</span>
-        <h1 class="home__title anime-text">Vern Esg</h1>
-        <span class="home__skill anime-text">Web Developer</span>
-
-      <div class="home__img"><img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" /></div>
-      <div class="home__social">
-        <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
-        <ion-icon name="logo-instagram" class="home__social-icon"></ion-icon>
-        <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
-      </div>
-    </div>
-
-    <!-- Sections -->
-    <section id="about" class="section">
-      <h2>About Me</h2>
-      <p>I am Vern Esg, a passionate web developer who builds clean and creative websites.</p>
-    </section>
-
-    <section id="services" class="section">
-      <h2>Services</h2>
-      <ul>
-        <li>Responsive Web Development</li>
-        <li>Landing Page Design</li>
-        <li>UI/UX Design</li>
-      </ul>
-    </section>
-
-    <section id="blog" class="section">
-      <h2>Blog</h2>
-      <p>Coming soon! Here I’ll share tips, tutorials, and insights into modern web development.</p>
-    </section>
-
-     <section id="achievements" class="section">
-     <h2>achievements</h2>
-
-         <ul> 
-              <li>Achieving High shool Deploma</>
-              <li>Certified at online programming</>
-              <li>GitHub repository maker</>
-              <li>Second year College students</>
-          </ul>
-
-    <section id="contact" class="section">
-      <h2>Contact</h2>
-      <form action="https://formspree.io/f/xyzwarbq" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-  </main>
-
-  <!-- ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-
-  <!-- YouTube Music Player Script -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
-    let isPlaying = false;
+    AOS.init({ duration: 1000 });
 
+    let isPlaying = false;
     function toggleYouTubeMusic() {
       const iframe = document.getElementById("youtube-iframe");
       const button = document.querySelector(".music-toggle");
-
       if (!isPlaying) {
         iframe.src = "https://www.youtube.com/embed/JGwWNGJdvx8?autoplay=1&loop=1&playlist=JGwWNGJdvx8";
         button.textContent = "Pause Music";
@@ -272,10 +241,10 @@
       }
     }
 
-    // Reveal animation
-    window.addEventListener("DOMContentLoaded", () => {
-      document.querySelectorAll('.anime-text, .section, .home__img img, .home__button')
-        .forEach(el => el.style.opacity = 1);
+    window.addEventListener("load", () => {
+      const loader = document.getElementById("page-loader");
+      loader.classList.add("fade-out");
+      setTimeout(() => loader.style.display = "none", 600);
     });
   </script>
 </body>
