--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     .home__img img {
       max-width: 250px;
       border-radius: 50%;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      border: 5px solid orange;
+      box-shadow: 0 0 20px rgba(255, 165, 0, 0.6);
     }
 
     .home__social {
@@ -125,19 +126,19 @@
       top: 20px;
       right: 20px;
       z-index: 999;
-      background: #ff4081;
+      background: orange;
       color: white;
       padding: 0.5rem 1rem;
       border: none;
       border-radius: 30px;
       cursor: pointer;
       font-weight: 600;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
     }
 
     .music-toggle:hover {
-      background-color: #e91e63;
-      box-shadow: 0 0 15px #ff4081;
+      background-color: darkorange;
+      box-shadow: 0 0 15px orange;
     }
 
     #youtube-iframe {
